--- a/RealTimeGraphics/RealTimeGraphics.vcxproj.filters
+++ b/RealTimeGraphics/RealTimeGraphics.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="basicVS.glsl">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="basicFS.glsl">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
